--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="image_default_width">128dp</dimen>
     <dimen name="image_default_height">128dp</dimen>
     <dimen name="space_between_image_and_title">20dp</dimen>
+    <dimen name="image_slider_padding">50dp</dimen>
 </resources>
